--- a/docker/client/Dockerfile
+++ b/docker/client/Dockerfile
@@ -4,3 +4,7 @@ RUN apt update && apt install -y python3-pip
 RUN pip install --upgrade pip
 RUN pip install aperturedb
 ADD setup.sh /
+RUN mkdir /app
+COPY app /app
+#CMD tail -f /dev/null
+CMD bash /setup.sh
